--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
     font-size: 25px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(74, 74, 216, 0.519));
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -66,7 +66,7 @@
     font-size: 30px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(53, 53, 243, 0.519));
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -112,7 +112,7 @@
     font-size: 25px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(74, 74, 216, 0.519));
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -121,7 +121,7 @@
     font-size: 30px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(53, 53, 243, 0.519));
-    -webkit-background-clip: text;
+     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -165,7 +165,7 @@
     font-size: 25px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(74, 74, 216, 0.519));
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -174,7 +174,7 @@
     font-size: 30px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(53, 53, 243, 0.519));
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
