--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@
     font-size: 30px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(53, 53, 243, 0.519));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
