--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
     font-size: 25px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(74, 74, 216, 0.519));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -66,6 +67,7 @@
     font-size: 30px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(53, 53, 243, 0.519));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -112,6 +114,7 @@
     font-size: 25px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(74, 74, 216, 0.519));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -121,6 +124,7 @@
     font-size: 30px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(53, 53, 243, 0.519));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -165,6 +169,7 @@
     font-size: 25px;
     margin: 20px 0;
     background: linear-gradient(to right,#fac404,rgba(74, 74, 216, 0.519));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -191,6 +196,15 @@
     cursor: pointer;
 }
 
+/* .chance_main{
+
+    margin-bottom: 20px;
+    font-size: 22px;
+    background: linear-gradient(to right, #fac404,#957606);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+} */
 
 
 /* media query */
